# localdeps

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
conda_dev/: __init__.py
localdeps/: __init__.py
tests/: test_conda_dev.py  test_localdeps.py
