[project]
name = "conda-dev"
version = "0.0.1"
authors = [
  { name="Charlie Haley" },
]
description = "Install conda package dependencies into a conda environment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cshaley/conda-dev"
"Bug Tracker" = "https://github.com/cshaley/conda-dev/issues"

[tool.poetry]

[tool.poetry.dependencies]
python = "^3.4"
conda = "^4.13"
conda-build = "^3.22"
