[project]
name = "conda_dev"
version = "0.0.1"
authors = [
  { name="Charlie Haley" },
]
description = "Install conda package dependencies into a conda environment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cshaley/conda-dev"
"Bug Tracker" = "https://github.com/cshaley/conda-dev/issues"
